fix: align

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -145,6 +145,7 @@ a.navbar-item.is-active {
           }
           table td, table th {
             padding: 10px, 10px;
+            vertical-align: middle;
           }
           table thead tr {
             height: 60px;
